--- a/test2.css
+++ b/test2.css
@@ -47,10 +47,10 @@ button{
     font-size: 1.2rem;
 }
 
-header{
+/* header{
     height: 30vh;
     position: relative;
-}
+} */
 
 .header{    
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
@@ -58,6 +58,7 @@ header{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: 30vh;
 }
 
 .nav-right{
@@ -91,10 +92,10 @@ header{
 }
 
 .profile-photo img{
-    height: 18rem;
-    width: 20rem;
+    height: 20%;
+    width: 15rem;
     top: 10rem;
-    left: 3% ;
+    left: 5% ;
     position: absolute;
     border-radius: 15px;
 }
@@ -139,12 +140,12 @@ header{
 .profile-completion{
     display: flex;
     gap: 2rem;
-    margin-left: 110rem;
+    margin-left: 75%;
     margin-top: -12rem;
     fill: none; 
     height: 12rem;
     padding: 1rem;
-    width: 28rem;
+    max-width: 28rem;
     background-color: rgba(255, 255, 255, 0.337);
 }
 
@@ -170,8 +171,8 @@ header{
 
 .profile-completion-percentage{
     position: absolute;
-    left: -8.8rem;
-    bottom: 24%;
+    left: -8.68rem;
+    bottom: 24.5%;
     font-size: 1.3rem;
     /* background-color: rgba(255, 255, 255, 0.515); */
     background-color: rgba(255, 255, 255, 0.337);
@@ -181,7 +182,6 @@ header{
     font-weight: 500;
     padding: 1.5rem;
 }
-
 
 .profile-completion-text button{
     background-color: #EE913A;
@@ -203,6 +203,10 @@ header{
     border-right: 1px solid #ddd;
     padding-right: 2rem;
     /* background-color: rebeccapurple; */
+}
+
+img{
+    object-fit: cover;    
 }
 
 .about-my-family-section,
@@ -295,6 +299,7 @@ header{
 .main-content-nav{
     display: flex;
     height: 8%;
+    align-items: center;
     /* background-color: aqua; */
     border-bottom: 2px solid #ddd;
 }
@@ -313,21 +318,22 @@ header{
 
 .main-content-nav li{
     display: inline-block;
-    height: 105%;
+    /* height: 105%; */
     /* background-color: red;   */
-    width: 13rem;
+    /* width: 13rem; */
     padding: 1rem 0;
-    text-align: left;
+    margin-top: 0.4rem;
+    /* text-align: left; */
 }
 
 .main-content-nav li:hover{
-    border-bottom: 3px solid #EE913A;
-    
+    border-bottom: 3px solid #ee913a;
 }
 
-.main-content-nav li:nth-child(3){
+
+/* .main-content-nav li:nth-child(3){
     width: 16rem;
-}
+} */
 
 .main-content-nav ul li a{
     text-decoration: none;
@@ -335,7 +341,7 @@ header{
     font-size: 1.5rem ; 
     /* background-color: blue;    */
     display: inline-block;
-    width: 120%;
+    /* width: 120%; */
     margin-top: 0.5rem;
     text-transform: uppercase;
     padding: 0 1.2rem;
@@ -401,9 +407,9 @@ header{
     gap: 1rem;
     align-items: center;
     /* box-shadow:  2px 1px 8px rgba(221, 221, 221, 0.178); */
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
+    box-shadow: 0px 0px 5px 2px whitesmoke;
     border-radius: 5px;
-
 }
 
 .card p{
@@ -474,7 +480,7 @@ header{
 
 .profile-card-container{
     /* background-color: aqua;   */
-    height: 60vh;
+    height: 55.5vh;
     width: 65%;
     display: flex;
     flex-direction: column;
@@ -491,10 +497,11 @@ header{
 .profile-card{
     /* background-color: coral; */
     width: 100%;
-    height: 50%;
+    height: 32.8%;
     display: flex;
     border-radius: 5px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
+    box-shadow: 0px 0px 5px 2px whitesmoke;
 }
 
 .profile-card img{
@@ -502,7 +509,7 @@ header{
     width: 2rem;
     flex: 0 0 20%;
     padding: 1rem;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 .profile-detail-header{
@@ -578,10 +585,11 @@ header{
     height: 55vh;
     width: 30%;
     padding: 2rem;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
+    box-shadow: 0px 0px 5px 2px whitesmoke;
     margin-top: 2rem;
     border-radius: 5px;   
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .activity-section-header{
@@ -611,7 +619,7 @@ header{
 .activity-setion-main-container{
     overflow: scroll;
     overflow-x: hidden;
-    height: 100%;
+    height: 85%;
 }
 
 .activity-setion-main-container::-webkit-scrollbar{
